objects/HC_obj_ciudades__c.object
<CustomObject>
    <fields>
        <fullName>HC_fld_confirmados__c</fullName>
        <label>Confirmados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_enfermedadInfecciosa__c</fullName>
        <label>Enfermedad Infecciosa</label>
        <referenceTo>HC_obj_enfermedadesInfecciosas__c</referenceTo>
        <relationshipLabel>Ciudades</relationshipLabel>
        <relationshipName>Ciudades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HC_fld_muertes__c</fullName>
        <label>Muertes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_nombre__c</fullName>
        <label>Nombre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ciudad</label>
    <nameField>
        <label>Ciudad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciudades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>